--- a/app.json
+++ b/app.json
@@ -12,6 +12,7 @@
       "supportsTablet": true
     },
     "android": {
+      "permissions": ["ACCESS_BACKGROUND_LOCATION"],
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon-foreground.png",
@@ -27,6 +28,12 @@
     },
     "plugins": [
       "expo-router",
+      [
+  "expo-location",
+  {
+    "locationAlwaysAndWhenInUsePermission": "Allow this app to access location even in background for safety tracking."
+  }
+],
       [
         "expo-splash-screen",
         {
